...

  Future<ListView> listaItems(List<Producto> productos) async {
    widget.total = await widget.total;
    widget.productos = await widget.productos;
    print(widget.productos.length);
    return ListView.builder(
      key: Key('listaPago'),
      physics: NeverScrollableScrollPhysics(),
      shrinkWrap: true,
      itemCount: productos.length,
      itemBuilder: (context, index) => ListTile(
        leading: Icon(
          Icons.check_circle,
...
                        fontSize: size.width * 0.05,
                        color: Colors.black,
                        fontWeight: FontWeight.bold)),
                SizedBox(height: size.height / 80),
                Center(
                  child: ToggleSwitch(
                    key: Key('toggleEntrega'),
                    minWidth: size.width * 0.4,
                    initialLabelIndex: 0,
                    totalSwitches: 2,
                    labels: ['A domicilio', 'Recoger en la U'],
                    onToggle: (index) {
                      print('switched to: $index');
...
                SizedBox(height: size.height / 30),
                Center(
                  child: Container(
                    width: size.width / 1.5,
                    height: size.height / 8,
                    child: TextFormField(
                      key: Key('instrucciones'),
                      cursorColor: Theme.of(context).cursorColor,
                      onChanged: (text) {
                        print('texto' + text);
                        instrucciones = text;
                      },
                      maxLength: 250,
...
                  height: size.height / 15,
                  decoration: BoxDecoration(
                      borderRadius: BorderRadius.circular(12.0),
                      border: Border.all(color: Colors.blue[700], width: 2.6),
                      color: Colors.white),
                  child: MaterialButton(
                    key: Key('confirmarPedido'),
                    child: setUpButtonChild(),
                    onPressed: () {
                      setState(() {
                        if (_state == 0) {
                          animateButton();
                        }
...
